--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "symfony/var-exporter": "^4.4.13",
         "ext-json": "*",
         "ext-curl": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "endroid/qr-code": "^3.9"
     },
     "config": {
         "preferred-install": "dist"
